# GGSN---MAGN

./: .gitignore  README.md  main.ipynb  priorities.txt  pyproject.toml  requirements.txt  setup.py
docs/examples/: example1.dot
docs/examples/data/: AA.dot  animals.csv  animals1.dot  animals2.dot  animals3.dot  food.csv  food1.dot  food2.dot  food3.dot
src/asa/: ASAElement.py  ASAGraph.py  ASANode.py
src/magn/: abstract_node.py  first.py  magn.py  magn_object_node.py  mang.py  mang_graph.py  prediction_type.py
src/magn/asa/: ASAElement.py  ASAGraph.py  ASANode.py  asa_element.py  asa_graph.py  asa_node.py
src/magn/database/: database.py  keys.py  mock_database.py  second.py  sqlite3.py  topological_sort.py
src/magn/database/converters/: interface.py  sqlite3.py
src/magn/database/converters/sqlite3/: converter.py
src/magn/database/sorting/: topological_sort.py
src/magn/database/structures/: graph.py
test/: ASATest.ipynb
tests/: ASATest.ipynb  db_test.ipynb  magnTest.ipynb  magnTest.py
