python-implementation = "CPython"

[project]
name = "magn"
version = "1.0.0.0"
authors = [
    { name="Szymon Jurecki", email="sdjurecki@gmail.com" },
    { name="Dominik Breksa", email="dominikbreksa@gmail.com" },
]
description = "Small Libreary for MAGNs implementation."
readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">=3.12.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = [
    "dependencies",
]


[project.urls]
Homepage = "https://github.com/CaIiguIa/GGSN---MAGN"
Issues = "https://github.com/CaIiguIa/GGSN---MAGN/issues"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pylint.messages_control]
max-line-length = 120
